2001-03-27  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/stylesheet-plain.scm: more reports centered
	by default

	* src/scm/html-document.scm: Christopher Browne's markup
	style extension.

	* src/gnome/window-main.c (gnc_report_in_main_window): show new
	page

	* doc/sgml/pt_PT/Makefile.am: remove demo html files

	* doc/sgml/es/Makefile.am: remove demo html files

	* doc/sgml/C/Makefile.am: remove demo html files

	* src/gnome/dialog-column-view.c: mark the options dialog
	changes as appropriate

	* src/gnome/dialog-options.c (gnc_options_dialog_changed): new
	public func

	* src/gnome/dialog-tax-info.c: more work

	* src/gnome/dialog-options.c: set apply button sensitivity
	appropriately

	* src/scm/report/average-balance.scm: use option-utilities

	* src/scm/report/transaction-report.scm: use option-utilities

	* src/scm/options-utilities.scm: remove superfluous (begin)'s

2001-03-26  Dave Peticolas  <dave@krondo.com>

	* src/gnome/gnc-html.c: fix compiler warning

	* src/scm/prefs.scm: add new liability/equity debit/credit labels

	* src/register/gnome/pricecell-gnome.c (PriceDirect): don't use
	key stroke if cell value doesn't change

	* src/register/pricecell.c (xaccSetPriceCellValue): return TRUE
	if cell value actually changed

2001-03-27  James LewisMoss  <jimdres@mindspring.com>

	* src/engine/io-gncxml-v2.c (add_account_local): duh.  currency
	not commodity.  commodity is same as Security.  Old gets freed
	really hosing the data known_commodities structure.

2001-03-26  James LewisMoss  <jimdres@mindspring.com>

	* src/engine/gnc-commodity.c (count_coms): new func.
	(gnc_commodity_table_get_size): Actually return size rather than
	namespace size.
	(gnc_commodity_table_get_number_of_namespaces): new func.  Used to
	be the get_size one.

	* src/test/test-commodities.c (test_commodity): Improve error
	output for size diffs.

2001-03-26  Bill Gribble  <grib@billgribble.com>

	* src/gnome/dialog-column-view.{c,h}: new files.  Options editor